# Aula18_Python

./: README.md  pyproject.toml
src/: controller_4.py  db_3.py  main_5.py  model_2.py  pokemon.db  schema_1.py
