[tool.poetry]
name = "aula18"
version = "0.1.0"
description = ""
authors = ["Luiz Artur <luiz.lamoglia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
sqlalchemy = "^2.0.34"
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
